--- a/style.css
+++ b/style.css
@@ -196,9 +196,8 @@ width: 66%;
     max-width: 84%;
     max-height: 200vh;
     display: grid;
-    background-color: #b6ffc0;
-    background-repeat: no-repeat;
-    background-position: left;
+    background: rgb(182,255,192);
+    background: linear-gradient(90deg, rgba(182,255,192,1) 0%, rgba(182,255,192,1) 60%, rgba(255,255,255,1) 60%, rgba(255,255,255,1) 100%); 
     margin-top: 4rem;
 }
 
